--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
-        </dependency><dependency>
+        </dependency>
+        <dependency>
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-web</artifactId>
         <version>5.0.6.RELEASE</version>
