--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,10 +1,10 @@
 # MySQL properties
 db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/pre?serverTimezone=UTC
+db.url=jdbc:mysql://localhost:3306/prepro3?serverTimezone=UTC
 db.username=root
 db.password=admin
 #verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&
 # Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=create
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
